--- a/QuickMaster1/src/main/resources/application.properties
+++ b/QuickMaster1/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:quickmaster
+spring.datasource.username=sa
+spring.datasource.password=
+spring.sql.init.encoding=UTF-8
+spring.sql.init.mode=always
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+#これを追加しないとdata.sqlが先に読み込まれEntityでのテーブル作成が後になりエラーになる
+spring.jpa.defer-datasource-initialization=true
