--- a/QuickMaster3/src/main/resources/application.properties
+++ b/QuickMaster3/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 #これを追加しないとdata.sqlが先に読み込まれEntityでのテーブル作成が後になりエラーになる
 spring.jpa.defer-datasource-initialization=true
+spring.mvc.hiddenmethod.filter.enabled=true
